--- a/native/platforms/win/CMakeLists.txt
+++ b/native/platforms/win/CMakeLists.txt
@@ -2,11 +2,20 @@ cmake_minimum_required(VERSION 3.23)
 
 project(zero CXX)
 
-add_executable(zero WIN32 main.cpp)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT zero)
 
+set(SRC_FILES
+    main.cpp
+    Log.cpp
+)
+
+add_executable(zero WIN32 ${SRC_FILES})
+
 add_subdirectory(../../core ${CMAKE_CURRENT_BINARY_DIR}/core)
+
 target_link_libraries(zero PRIVATE core)
+
+add_subdirectory(../gfx/vulkan gfx)
 
 foreach(item ${WIN32_DLLS})
     get_filename_component(filename ${item} NAME)
