--- a/native/core/CMakeLists.txt
+++ b/native/core/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_library(core STATIC gfx/Device.cpp)
+set(SRC_FILES
+    Window.cpp
+)
+
+add_library(core STATIC ${SRC_FILES})
+target_include_directories(core INTERFACE ./)
 
 add_subdirectory(thirdparty/sdl2)
-target_link_libraries(core INTERFACE SDL2)
-
-add_subdirectory(thirdparty/vulkan)
-
-add_subdirectory(thirdparty/volk)
-target_link_libraries(core INTERFACE volk)
+target_link_libraries(core PRIVATE SDL2)
 
 set(WIN32_DLLS ${WIN32_DLLS} PARENT_SCOPE)
