v8 sugar (+4 squashed commit)
Squashed commit:

[4929a1c] util rw for read & write file

[1d43d5d] refactor: use pure function instead of static method

[0a045db] load es module

[1899f61] log js errors

--- a/native/platforms/win/CMakeLists.txt
+++ b/native/platforms/win/CMakeLists.txt
@@ -6,7 +6,7 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT z
 
 set(SRC_FILES
     main.cpp
-    Log.cpp
+    utils/log.cpp
 )
 
 add_executable(zero WIN32 ${SRC_FILES})
