module resolve (+1 squashed commits)
Squashed commits:

[fd60f1f] module resolve

--- a/native/core/CMakeLists.txt
+++ b/native/core/CMakeLists.txt
@@ -12,6 +12,6 @@ add_subdirectory(thirdparty/sdl2)
 target_link_libraries(core PRIVATE SDL2)
 
 add_subdirectory(thirdparty/v8)
-target_link_libraries(core PRIVATE v8)
+target_link_libraries(core PUBLIC v8)
 
 set(WIN32_DLLS ${WIN32_DLLS} PARENT_SCOPE)
