--- a/native/core/CMakeLists.txt
+++ b/native/core/CMakeLists.txt
@@ -3,13 +3,14 @@ set(SRC_FILES
     sugars/sdlsugar.cpp
     sugars/v8sugar.cpp
     bindings/console.cpp
+    bindings/gfx/Device.cpp
 )
 
 add_library(core STATIC ${SRC_FILES})
 target_include_directories(core PUBLIC ./)
 
 add_subdirectory(thirdparty/sdl2)
-target_link_libraries(core PRIVATE SDL2)
+target_link_libraries(core PUBLIC SDL2)
 
 add_subdirectory(thirdparty/v8)
 target_link_libraries(core PUBLIC v8)
