use sdk's vulkan headers

--- a/native/platforms/gfx/vulkan/CMakeLists.txt
+++ b/native/platforms/gfx/vulkan/CMakeLists.txt
@@ -9,8 +9,14 @@ add_library(gfx STATIC ${SRC_FILES})
 # add_subdirectory(../../core ${CMAKE_CURRENT_BINARY_DIR}/core)
 target_link_libraries(gfx PRIVATE core)
 
-# add_subdirectory(thirdparty/vulkan)
+find_package(Vulkan REQUIRED)
 
+if(TARGET Vulkan::Vulkan)
+    message(" Vulkan as target")
+    target_link_libraries(gfx PRIVATE Vulkan::Vulkan)
+endif()
+
+# add_subdirectory(thirdparty/vulkan)
 # add_subdirectory(thirdparty/volk)
 # target_link_libraries(gfx PRIVATE volk)
 add_subdirectory(thirdparty/vk-bootstrap)
