--- a/projects/triangle/script/platforms/web/tsconfig.json
+++ b/projects/triangle/script/platforms/web/tsconfig.json
@@ -3,7 +3,8 @@
   "include": [
     "../../../../../script/core",
     "../../../../../script/platforms/webgl",
-    "."
+    ".",
+    "../../main"
   ],
   "compilerOptions": {
     "outDir": "dist"
