--- a/projects/triangle/script/platforms/web/package.json
+++ b/projects/triangle/script/platforms/web/package.json
@@ -1,9 +1,7 @@
 {
     "scripts": {
         "tsc": "tsc --watch",
-        "server": "http-server ../../../../../ -p 8003 -o projects/triangle/script/platforms/web/app.html -c-1"
-    },
-    "dependencies": {
-        "http-server": "^14.1.1"
+        "server": "http-server ../../../../../ -p 8003 -o projects/triangle/script/platforms/web/app.html -c-1",
+        "dev": "concurrently \"npm run tsc\" \"npm run server\""
     }
 }
