--- a/projects/triangle/script/platforms/jsb/tsconfig.json
+++ b/projects/triangle/script/platforms/jsb/tsconfig.json
@@ -3,7 +3,7 @@
   "include": [
     "../../../../../script/core",
     "../../../../../script/platforms/jsb",
-    "."
+    "../../main"
   ],
   "compilerOptions": {
     "outDir": "dist"
