--- a/native/platforms/gfx/vulkan/CMakeLists.txt
+++ b/native/platforms/gfx/vulkan/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SRC_FILES
     VkPipeline.cpp
     VkDescriptorSetLayout.cpp
     VkDescriptorSet.cpp
+    VkFence.cpp
+    VkSemaphore.cpp
 )
 
 add_library(gfx STATIC ${SRC_FILES})
