VkFramebuffer and some refactors

--- a/native/platforms/gfx/vulkan/CMakeLists.txt
+++ b/native/platforms/gfx/vulkan/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRC_FILES
     VkTexture.cpp
     VkShader.cpp
     VkRenderPass.cpp
+    VkFramebuffer.cpp
     VkPipelineLayout.cpp
     VkPipeline.cpp
     VkDescriptorSetLayout.cpp
