--- a/native/core/CMakeLists.txt
+++ b/native/core/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRC_FILES
     bindings/gfx/Texture.cpp
     bindings/gfx/Shader.cpp
     bindings/gfx/RenderPass.cpp
+    bindings/gfx/Framebuffer.cpp
     bindings/gfx/PipelineLayout.cpp
     bindings/gfx/Pipeline.cpp
     bindings/gfx/DescriptorSetLayout.cpp
