InputAssembler for gfx

--- a/native/core/CMakeLists.txt
+++ b/native/core/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SRC_FILES
     bindings/gfx/Shader.cpp
     bindings/gfx/RenderPass.cpp
     bindings/gfx/Framebuffer.cpp
+    bindings/gfx/InputAssembler.cpp
     bindings/gfx/PipelineLayout.cpp
     bindings/gfx/Pipeline.cpp
     bindings/gfx/DescriptorSetLayout.cpp
