--- a/native/platforms/android/android-project/app/build.gradle
+++ b/native/platforms/android/android-project/app/build.gradle
@@ -13,7 +13,7 @@ android {
         if (buildAsApplication) {
             applicationId "org.libsdl.app"
         }
-        minSdkVersion 16
+        minSdkVersion 23 // support for stderr
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,7 @@ android {
             //     abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
             // }
             cmake {
-                arguments "-DANDROID_APP_PLATFORM=android-16", "-DANDROID_STL=c++_static"
+                arguments "-DANDROID_STL=c++_static"
                 // abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
 //                abiFilters 'arm64-v8a'
             }
