--- a/native/platforms/gfx/vulkan/CMakeLists.txt
+++ b/native/platforms/gfx/vulkan/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SRC_FILES
     internal/volk/volk.c
+    internal/VkDescriptorSetPool.cpp
     VkDevice.cpp
     VkCommandBuffer.cpp
     VkBuffer.cpp
