--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -28,7 +28,14 @@ set(SRC_FILES
 )
 
 add_library(zero_main STATIC ${SRC_FILES})
+
 target_link_libraries(zero_main PUBLIC sdl)
 target_link_libraries(zero_main PUBLIC v8)
 target_include_directories(zero_main PUBLIC ./ ./sdl ./v8)
+
+include(FetchContent)
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
+FetchContent_MakeAvailable(json)
+target_link_libraries(zero_main PRIVATE nlohmann_json::nlohmann_json)
+
 add_library(zero::main ALIAS zero_main)
