--- a/native/platforms/android/android-project/app/src/main/AndroidManifest.xml
+++ b/native/platforms/android/android-project/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
     <!-- Allow access to the vibrator -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <!-- if you want to capture audio, uncomment this. -->
     <!-- <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
 
