--- a/projects/skin/script/web/package.json
+++ b/projects/skin/script/web/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
         "tsc": "tsc --watch",
-        "server": "http-server ../../../../../ -p 8003 -o projects/skin/script/platforms/web/app.html -c-1",
+        "server": "http-server ../../../../ -p 8003 -o projects/skin/script/web/app.html -c-1",
         "dev": "concurrently \"npm run tsc\" \"npm run server\""
     }
 }
