--- a/projects/shadow/script/web/tsconfig.json
+++ b/projects/shadow/script/web/tsconfig.json
@@ -2,17 +2,9 @@
   "extends": "../../../../script/tsconfig.json",
   "include": [
     ".",
-    "../main",
-    "../../../../script/engine/web",
-    "../../../../script/gfx/webgl",
+    "../main"
   ],
   "compilerOptions": {
-    "paths": {
-      "gfx-main":["../../../../script/gfx/main"],
-      "gfx-webgl":["../../../../script/gfx/webgl"],
-      "engine-main": ["../../../../script/engine/main"],
-      "engine-web": ["../../../../script/engine/web"],
-    },
     "outDir": "dist"
   }
 }
