--- a/script/engine/main/tsconfig.json
+++ b/script/engine/main/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "gfx-main": ["../../gfx/main"],
-    }
-  }
+  "extends": "../../tsconfig.json"
 }
