--- a/script/engine/web/tsconfig.json
+++ b/script/engine/web/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "extends": "../../tsconfig.json",
-  "include": [
-    ".",
-  ],
-  "compilerOptions": {
-    "paths": {
-      "gfx-main":["../../gfx/main"],
-      "gfx-webgl":["../../gfx/webgl"],
-      "engine-main": ["../main"],
-    }
-  }
+  "extends": "../../tsconfig.json"
 }
