--- a/script/gfx/webgl/tsconfig.json
+++ b/script/gfx/webgl/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "gfx-main":["../main"]
-    },
-    "outDir": "dist"
-  }
+  "extends": "../../tsconfig.json"
 }
