--- a/projects/shadow/script/web/package.json
+++ b/projects/shadow/script/web/package.json
@@ -1,10 +1,15 @@
 {
+    "type": "module",
     "scripts": {
         "gfx-main": "tsc -p ../../../../script/gfx/main --outDir dist/gfx-main --watch",
         "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir dist/gfx-webgl --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-web": "tsc -p ../../../../script/engine/web --outDir dist/engine-web --watch",
         "server": "http-server ../../../../ -p 8003 -o projects/shadow/script/web/index.html -e js -c-1",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-web\" \"npm run server\""
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-web\" \"npm run server\"",
+        "bundle": "tsc && rollup -c && http-server ../../../../ -p 8003 -o projects/shadow/script/web/index-bundle.html"
+    },
+    "devDependencies": {
+        "@rollup/plugin-alias": "^5.0.0"
     }
 }
