--- a/projects/shadow/script/jsb/tsconfig.json
+++ b/projects/shadow/script/jsb/tsconfig.json
@@ -2,14 +2,9 @@
   "extends": "../../../../script/tsconfig.json",
   "include": [
     ".",
-    "../main",
-    "../../../../script/engine/jsb",
+    "../main"
   ],
   "compilerOptions": {
-    "paths": {
-      "gfx-main":["../../../../script/gfx/main"],
-      "engine-main": ["../../../../script/engine/main"],
-    },
     "outDir": "dist"
   }
 }
