jsb requestAnimationFrame (+1 squashed commits)
Squashed commits:

[4a958f2] jsb index (+1 squashed commits)

Squashed commits:

[deda4be] refactor

--- a/projects/shadow/script/jsb/package.json
+++ b/projects/shadow/script/jsb/package.json
@@ -4,5 +4,8 @@
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-jsb": "tsc -p ../../../../script/engine/jsb --outDir dist/engine-jsb --watch",
         "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run engine-main\" \"npm run engine-jsb\""
+    },
+    "dependencies": {
+        "engine-jsb": "file:../../../../script/engine/jsb"
     }
 }
