jsb-systemjs (+1 squashed commits)
Squashed commits:

[3078e77] jsb-systemjs

--- a/projects/shadow/script/jsb/package.json
+++ b/projects/shadow/script/jsb/package.json
@@ -3,9 +3,11 @@
         "gfx-main": "tsc -p ../../../../script/gfx/main --outDir dist/gfx-main --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-jsb": "tsc -p ../../../../script/engine/jsb --outDir dist/engine-jsb --watch",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run engine-main\" \"npm run engine-jsb\""
+        "main": "tsc -p ../main --outDir dist/main --watch",
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run engine-main\" \"npm run engine-jsb\" \"npm run main\""
     },
     "dependencies": {
-        "engine-jsb": "file:../../../../script/engine/jsb"
+        "engine-jsb": "file:../../../../script/engine/jsb",
+        "main": "file:../main"
     }
 }
