--- a/projects/shadow/script/jsb-systemjs/tsconfig.json
+++ b/projects/shadow/script/jsb-systemjs/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../../../script/tsconfig.json",
+  "include": [
+    "./index.ts"
+  ],
   "compilerOptions": {
     "outDir": "dist"
   }
