--- a/projects/shadow/script/web/package.json
+++ b/projects/shadow/script/web/package.json
@@ -5,8 +5,9 @@
         "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir dist/gfx-webgl --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-web": "tsc -p ../../../../script/engine/web --outDir dist/engine-web --watch",
+        "main": "tsc -p ../main --outDir ./dist/main --watch",
         "server": "http-server ../../../../ -p 8003 -o projects/shadow/script/web/index.html -e js -c-1",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-web\" \"npm run server\"",
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-web\" \"npm run main\" \"npm run server\"",
         "bundle": "tsc && rollup -c && http-server ../../../../ -p 8003 -o projects/shadow/script/web/index-bundle.html -c-1",
         "bundle-es6": "tsc && rollup -c && babel ./dist/bundle.js --out-file ./dist/bundle-es6.js && http-server ../../../../ -p 8003 -o projects/shadow/script/web/index-bundle.html -c-1"
     },
@@ -15,6 +16,7 @@
         "@rollup/plugin-alias": "^5.0.0"
     },
     "dependencies": {
-        "engine-web": "file:../../../../script/engine/web"
+        "engine-web": "file:../../../../script/engine/web",
+        "main": "file:../main"
     }
 }
