--- a/projects/shadow/script/wx/package.json
+++ b/projects/shadow/script/wx/package.json
@@ -1,17 +1,18 @@
 {
     "type": "module",
     "scripts": {
-        "yaml": "rollup -c -i ../../../../script/engine/main/node_modules/yaml/browser/index.js -o ./dist/yaml.js",
-        "spine-core": "rollup -c -i ../../../../script/engine/main/node_modules/@esotericsoftware/spine-core/dist/index.js -o ./dist/spine-core.js",
-        "gfx-main": "tsc -p ../../../../script/gfx/main --outDir dist/gfx-main --module system --watch",
-        "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir dist/gfx-webgl --module system --watch",
-        "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --module system --watch",
-        "engine-wx": "tsc -p ../../../../script/engine/wx --outDir dist/engine-wx --module system --watch",
-        "server": "http-server ../../../../ -p 8003 -o projects/shadow/script/wx/index.html -e js -c-1",
-        "dev": "concurrently \"tsc --module system --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run server\""
+        "yaml": "rollup -c -i ../../../../script/engine/main/node_modules/yaml/browser/index.js -o ../../../../minigame/projects/shadow/script/yaml.js",
+        "spine-core": "rollup -c -i ../../../../script/engine/main/node_modules/@esotericsoftware/spine-core/dist/index.js -o ../../../../minigame/projects/shadow/script/spine-core.js",
+        "gfx-main": "tsc -p ../../../../script/gfx/main --outDir ../../../../minigame/projects/shadow/script/gfx-main --module system --watch",
+        "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir ../../../../minigame/projects/shadow/script/gfx-webgl --module system --watch",
+        "engine-main": "tsc -p ../../../../script/engine/main --outDir ../../../../minigame/projects/shadow/script/engine-main --module system --watch",
+        "engine-wx": "tsc -p ../../../../script/engine/wx --outDir ../../../../minigame/projects/shadow/script/engine-wx --module system --watch",
+        "main": "tsc -p ../main --outDir ../../../../minigame/projects/shadow/script/main --module system --watch",
+        "dev": "concurrently \"tsc -p . --outDir ../../../../minigame/projects/shadow/script --module system --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run main\""
     },
     "dependencies": {
-        "engine-wx": "file:../../../../script/engine/wx"
+        "engine-wx": "file:../../../../script/engine/wx",
+        "main": "file:../main"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
