--- a/projects/shadow/script/wx/tsconfig.json
+++ b/projects/shadow/script/wx/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../../../script/tsconfig.json",
   "include": [
-    "./index.ts",
-    "../main"
+    "./index.ts"
   ],
   "compilerOptions": {
     "outDir": "dist"
