refactor (+1 squashed commits)
Squashed commits:

[1deabaf] refactor

--- a/script/engine/web/package.json
+++ b/script/engine/web/package.json
@@ -2,6 +2,7 @@
     "name": "engine-web",
     "dependencies": {
         "engine-main": "file:../main",
+        "gfx-main": "file:../../gfx/main",
         "gfx-webgl": "file:../../gfx/webgl"
     }
 }
