--- a/projects/vehicle/script/web/tsconfig.json
+++ b/projects/vehicle/script/web/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../../../script/tsconfig.json",
   "include": [
-    ".",
-    "../main"
+    "./index.ts",
   ],
   "compilerOptions": {
     "outDir": "dist"
