--- a/projects/vehicle/script/web/package.json
+++ b/projects/vehicle/script/web/package.json
@@ -3,11 +3,12 @@
     "scripts": {
         "gfx-main": "tsc -p ../../../../script/gfx/main --outDir dist/gfx-main --watch",
         "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir dist/gfx-webgl --watch",
+        "phys": "tsc -p ../../../../script/phys/ammo --outDir dist/phys --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-web": "tsc -p ../../../../script/engine/web --outDir dist/engine-web --watch",
         "main": "tsc -p ../main --outDir ./dist/main --watch",
         "server": "http-server ../../../../ -p 8003 -o projects/vehicle/script/web/index.html -e js -c-1",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-web\" \"npm run main\" \"npm run server\""
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-web\" \"npm run main\" \"npm run server\""
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.14",
