refactor (+1 squashed commits)
Squashed commits:

[76e40dd] refactor (+1 squashed commits)

Squashed commits:

[c91d6ec] refactor

--- a/projects/spine/script/web/package.json
+++ b/projects/spine/script/web/package.json
@@ -1,14 +1,14 @@
 {
     "type": "module",
     "scripts": {
-        "gfx-main": "tsc -p ../../../../script/gfx/main --outDir dist/gfx-main --watch",
-        "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir dist/gfx-webgl --watch",
+        "gfx-common": "tsc -p ../../../../script/gfx/common --outDir dist/gfx-common --watch",
+        "gfx": "tsc -p ../../../../script/gfx/webgl2 --outDir dist/gfx --watch",
         "phys": "tsc -p ../../../../script/phys/ammo --outDir dist/phys --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-web": "tsc -p ../../../../script/engine/web --outDir dist/engine-web --watch",
         "main": "tsc -p ../main --outDir ./dist/main --watch",
         "server": "http-server ../../../../ -p 8003 -o projects/spine/script/web/index.html -e js -c-1",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-web\" \"npm run main\" \"npm run server\""
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-web\" \"npm run main\" \"npm run server\""
     },
     "dependencies": {
         "engine-web": "file:../../../../script/engine/web",
