--- a/minigame/project.config.json
+++ b/minigame/project.config.json
@@ -2,15 +2,16 @@
     "description": "项目配置文件。",
     "setting": {
         "urlCheck": false,
-        "es6": false,
+        "es6": true,
         "postcss": true,
-        "minified": true,
+        "minified": false,
         "newFeature": true,
         "babelSetting": {
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
-        }
+        },
+        "enhance": true
     },
     "compileType": "game",
     "libVersion": "2.20.1",
