--- a/projects/shadow/script/wx/package.json
+++ b/projects/shadow/script/wx/package.json
@@ -3,12 +3,13 @@
     "scripts": {
         "yaml": "rollup -c -i ../../../../script/engine/main/node_modules/yaml/browser/index.js -o ../../../../minigame/projects/shadow/script/yaml.js",
         "spine-core": "rollup -c -i ../../../../script/engine/main/node_modules/@esotericsoftware/spine-core/dist/index.js -o ../../../../minigame/projects/shadow/script/spine-core.js",
-        "gfx-main": "tsc -p ../../../../script/gfx/main --outDir ../../../../minigame/projects/shadow/script/gfx-main --module system --watch",
-        "gfx-webgl": "tsc -p ../../../../script/gfx/webgl --outDir ../../../../minigame/projects/shadow/script/gfx-webgl --module system --watch",
+        "gfx-common": "tsc -p ../../../../script/gfx/common --outDir ../../../../minigame/projects/shadow/script/gfx-common --module system --watch",
+        "gfx": "tsc -p ../../../../script/gfx/webgl2 --outDir ../../../../minigame/projects/shadow/script/gfx --module system --watch",
+        "phys": "tsc -p ../../../../script/phys/null --outDir ../../../../minigame/projects/shadow/script/phys --module system --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir ../../../../minigame/projects/shadow/script/engine-main --module system --watch",
         "engine-wx": "tsc -p ../../../../script/engine/wx --outDir ../../../../minigame/projects/shadow/script/engine-wx --module system --watch",
         "main": "tsc -p ../main --outDir ../../../../minigame/projects/shadow/script/main --module system --watch",
-        "dev": "concurrently \"tsc -p . --outDir ../../../../minigame/projects/shadow/script --module system --watch\" \"npm run gfx-main\" \"npm run gfx-webgl\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run main\""
+        "dev": "concurrently \"tsc -p . --outDir ../../../../minigame/projects/shadow/script --module system --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run main\""
     },
     "dependencies": {
         "engine-wx": "file:../../../../script/engine/wx",
