--- a/projects/ui/script/wx/tsconfig.json
+++ b/projects/ui/script/wx/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../../script/tsconfig.json",
   "include": [
-    "./index.ts",
+    "./index.ts"
   ],
   "compilerOptions": {
     "outDir": "dist"
