new lib: loader (+1 squashed commits)
Squashed commits:

[fb77aaa] new lib: loader

--- a/projects/shadow/script/jsb/package.json
+++ b/projects/shadow/script/jsb/package.json
@@ -2,11 +2,12 @@
     "scripts": {
         "gfx-common": "tsc -p ../../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../../script/gfx/jsb --outDir dist/gfx --watch",
+        "loader": "tsc -p ../../../../script/loader/jsb --outDir dist/loader --watch",
         "phys": "tsc -p ../../../../script/phys/ammo --outDir dist/phys --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir dist/engine-main --watch",
         "engine-jsb": "tsc -p ../../../../script/engine/jsb --outDir dist/engine-jsb --watch",
         "main": "tsc -p ../main --outDir dist/main --watch",
-        "dev": "concurrently \"tsc --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-jsb\" \"npm run main\""
+        "dev": "concurrently \"tsc --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-jsb\" \"npm run main\""
     },
     "dependencies": {
         "engine-jsb": "file:../../../../script/engine/jsb",
