--- a/script/engine/jsb/package.json
+++ b/script/engine/jsb/package.json
@@ -1,6 +1,7 @@
 {
   "name": "engine-jsb",
   "dependencies": {
-    "engine-main": "file:../main"
+    "engine-main": "file:../main",
+    "loader": "file:../../loader/declare"
   }
 }
