--- a/script/engine/main/package.json
+++ b/script/engine/main/package.json
@@ -3,6 +3,7 @@
     "dependencies": {
         "@esotericsoftware/spine-core": "^4.2.18",
         "gfx": "file:../../gfx/declare",
+        "loader": "file:../../loader/declare",
         "phys": "file:../../phys/declare",
         "yaml": "^2.3.2"
     }
