--- a/projects/ui/script/wx/package.json
+++ b/projects/ui/script/wx/package.json
@@ -5,11 +5,12 @@
         "spine-core": "rollup -i ../../../../script/engine/main/node_modules/@esotericsoftware/spine-core/dist/index.js -f system -o ../../../../minigame/projects/ui/script/spine-core.js",
         "gfx-common": "tsc -p ../../../../script/gfx/common --outDir ../../../../minigame/projects/ui/script/gfx-common --module system --sourcemap false --watch",
         "gfx": "tsc -p ../../../../script/gfx/webgl2 --outDir ../../../../minigame/projects/ui/script/gfx --module system --sourcemap false --watch",
+        "loader": "tsc -p ../../../../script/loader/wx --outDir ../../../../minigame/projects/ui/script/loader --module system --sourcemap false --watch",
         "phys": "tsc -p ../../../../script/phys/null --outDir ../../../../minigame/projects/ui/script/phys --module system --sourcemap false --watch",
         "engine-main": "tsc -p ../../../../script/engine/main --outDir ../../../../minigame/projects/ui/script/engine-main --module system --sourcemap false --watch",
         "engine-wx": "tsc -p ../../../../script/engine/wx --outDir ../../../../minigame/projects/ui/script/engine-wx --module system --sourcemap false --watch",
         "main": "tsc -p ../main --outDir ../../../../minigame/projects/ui/script/main --module system --sourcemap false --watch",
-        "dev": "concurrently \"tsc -p . --outDir ../../../../minigame/projects/ui/script --module system --sourcemap false --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run main\""
+        "dev": "concurrently \"tsc -p . --outDir ../../../../minigame/projects/ui/script --module system --sourcemap false --watch\" \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run engine-main\" \"npm run engine-wx\" \"npm run main\""
     },
     "dependencies": {
         "engine-wx": "file:../../../../script/engine/wx",
