--- a/projects/shadow/script/web/package.json
+++ b/projects/shadow/script/web/package.json
@@ -1,6 +1,8 @@
 {
     "type": "module",
     "scripts": {
+        "yaml": "rollup -i ../../../../script/engine/main/node_modules/yaml/browser/index.js -o dist/yaml.js",
+        "spine-core": "rollup -i ../../../../script/engine/main/node_modules/@esotericsoftware/spine-core/dist/index.js -o dist/spine-core.js",
         "gfx-common": "tsc -p ../../../../script/gfx/common --outDir dist/gfx-common --watch",
         "gfx": "tsc -p ../../../../script/gfx/webgl2 --outDir dist/gfx --watch",
         "loader": "tsc -p ../../../../script/loader/web --outDir dist/loader --watch",
