--- a/projects/vehicle/web/package.json
+++ b/projects/vehicle/web/package.json
@@ -10,7 +10,8 @@
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
         "script": "tsc -p ../script --outDir dist --watch",
+        "physics": "tsc -p ../../../script/physics --outDir dist/physics --watch",
         "server": "http-server ../../../ -p 8003 -o projects/vehicle/web/index.html -c-1",
-        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run boot\" \"npm run engine\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run gfx-common\" \"npm run gfx\" \"npm run loader\" \"npm run phys\" \"npm run boot\" \"npm run engine\" \"npm run script\" \"npm run physics\" \"npm run server\""
     }
 }
