boot: refactor (+1 squashed commits)
Squashed commits:

[f0e6867] boot: refactor

--- a/script/boot/wx/package.json
+++ b/script/boot/wx/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
     "boot": "file:../declare",
-    "gfx": "file:../../gfx/declare"
+    "gfx": "file:../../gfx/webgl2"
   }
 }
