--- a/script/boot/web/package.json
+++ b/script/boot/web/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "boot": "file:../declare",
-    "gfx": "file:../../gfx/declare",
+    "gfx": "file:../../gfx/webgl2",
     "loader": "file:../../loader/declare"
   }
 }
