boot: now (+1 squashed commits)
Squashed commits:

[6416513] boot: now (+1 squashed commits)

Squashed commits:

[fac9b86] refactor

--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SRC_FILES
     swig/auto/ImageBitmap_wrap.cpp
     swig/auto/Loader_wrap.cpp
     swig/auto/gfx_wrap.cpp
-    swig/auto/global_wrap.cpp
+    swig/auto/Window_wrap.cpp
     bg/Device.cpp
     bg/CommandBuffer.cpp
     bg/Queue.cpp
